gumiho-mudang-scope/scope-core/tests/snapshots/malformed_sources/typescript__eof-in-template-literal.snap
---
source: gumiho-mudang-scope/scope-core/tests/malformed_sources.rs
expression: snapshot_data
---
[
    SkippedRangeRepr {
        reason: "tree_sitter_error:missing_node",
        start_line: 5,
        end_line: 5,
    },
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 6,
        end_line: 6,
    },
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 8,
        end_line: 8,
    },
    SkippedRangeRepr {
        reason: "tree_sitter_error:missing_node",
        start_line: 10,
        end_line: 10,
    },
]
